crates/jdlint_dart_parser/tests/snapshots/parser_tests__snap_annotation_with_args.snap
---
source: crates/jdlint_dart_parser/tests/parser_tests.rs
assertion_line: 1336
expression: "prog.declarations[0]"
---
Function(
    FunctionDecl {
        annotations: [
            Annotation {
                name: [
                    Identifier {
                        name: "Deprecated",
                        span: Span {
                            start: 1,
                            end: 11,
                        },
                    },
                ],
                constructor_name: None,
                args: Some(
                    ArgList {
                        positional: [
                            StringLit(
                                StringLitNode {
                                    raw: "'Use newFn instead'",
                                    value: "Use newFn instead",
                                    span: Span {
                                        start: 12,
                                        end: 31,
                                    },
                                },
                            ),
                        ],
                        named: [],
                        span: Span {
                            start: 11,
                            end: 33,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 33,
                },
            },
        ],
        is_external: false,
        is_async: false,
        is_generator: false,
        is_getter: false,
        is_setter: false,
        return_type: Some(
            Void {
                span: Span {
                    start: 33,
                    end: 38,
                },
            },
        ),
        name: Identifier {
            name: "oldFn",
            span: Span {
                start: 38,
                end: 43,
            },
        },
        type_params: [],
        params: FormalParamList {
            positional: [],
            optional_positional: [],
            named: [],
            span: Span {
                start: 43,
                end: 46,
            },
        },
        body: Some(
            Block(
                Block {
                    stmts: [],
                    span: Span {
                        start: 46,
                        end: 48,
                    },
                },
            ),
        ),
        span: Span {
            start: 33,
            end: 48,
        },
    },
)
