crates/jdlint_dart_parser/tests/snapshots/parser_tests__snap_const_class_field.snap
---
source: crates/jdlint_dart_parser/tests/parser_tests.rs
assertion_line: 1392
expression: "prog.declarations[0]"
---
Class(
    ClassDecl {
        annotations: [],
        modifiers: ClassModifiers {
            is_abstract: false,
            is_interface: false,
            is_base: false,
            is_final: false,
            is_sealed: false,
        },
        name: Identifier {
            name: "Config",
            span: Span {
                start: 6,
                end: 12,
            },
        },
        type_params: [],
        extends: None,
        with_clause: [],
        implements: [],
        members: [
            Field(
                FieldDecl {
                    annotations: [],
                    is_static: true,
                    is_abstract: false,
                    is_external: false,
                    is_covariant: false,
                    is_late: false,
                    is_final: false,
                    is_const: true,
                    field_type: Some(
                        Named(
                            NamedType {
                                segments: [
                                    Identifier {
                                        name: "int",
                                        span: Span {
                                            start: 28,
                                            end: 31,
                                        },
                                    },
                                ],
                                type_args: [],
                                is_nullable: false,
                                span: Span {
                                    start: 28,
                                    end: 32,
                                },
                            },
                        ),
                    ),
                    declarators: [
                        VarDeclarator {
                            name: Identifier {
                                name: "maxRetries",
                                span: Span {
                                    start: 32,
                                    end: 42,
                                },
                            },
                            initializer: Some(
                                IntLit {
                                    value: "3",
                                    span: Span {
                                        start: 45,
                                        end: 46,
                                    },
                                },
                            ),
                            span: Span {
                                start: 15,
                                end: 46,
                            },
                        },
                    ],
                    span: Span {
                        start: 15,
                        end: 48,
                    },
                },
            ),
            Field(
                FieldDecl {
                    annotations: [],
                    is_static: true,
                    is_abstract: false,
                    is_external: false,
                    is_covariant: false,
                    is_late: false,
                    is_final: false,
                    is_const: true,
                    field_type: Some(
                        Named(
                            NamedType {
                                segments: [
                                    Identifier {
                                        name: "String",
                                        span: Span {
                                            start: 61,
                                            end: 67,
                                        },
                                    },
                                ],
                                type_args: [],
                                is_nullable: false,
                                span: Span {
                                    start: 61,
                                    end: 68,
                                },
                            },
                        ),
                    ),
                    declarators: [
                        VarDeclarator {
                            name: Identifier {
                                name: "baseUrl",
                                span: Span {
                                    start: 68,
                                    end: 75,
                                },
                            },
                            initializer: Some(
                                StringLit(
                                    StringLitNode {
                                        raw: "'https://api.example.com'",
                                        value: "https://api.example.com",
                                        span: Span {
                                            start: 78,
                                            end: 103,
                                        },
                                    },
                                ),
                            ),
                            span: Span {
                                start: 48,
                                end: 103,
                            },
                        },
                    ],
                    span: Span {
                        start: 48,
                        end: 105,
                    },
                },
            ),
        ],
        span: Span {
            start: 0,
            end: 106,
        },
    },
)
